--- a/lab2/app/src/main/AndroidManifest.xml
+++ b/lab2/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
+            android:name=".TImerActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Home page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
