--- a/lab2/app/src/main/AndroidManifest.xml
+++ b/lab2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
-            android:name=".TImerActivity"
+            android:name=".EditActivity"
+            android:exported="false"
+            android:label="Edit Page" />
+        <activity
+            android:name=".TimerActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
