--- a/lab2/app/src/main/AndroidManifest.xml
+++ b/lab2/app/src/main/AndroidManifest.xml
@@ -12,11 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab2"
+        android:name=".App"
         tools:targetApi="31">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings">
+        </activity>
         <activity
             android:name=".EditActivity"
             android:exported="false"
-            android:label="Edit Page" />
+            android:label="Edit Page">
+        </activity>
         <activity
             android:name=".TimerActivity"
             android:exported="false" />
@@ -24,9 +31,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="Home page">
+            <!-- When returning from Settings Activity, it does not recreates the instance of the activity instead calls the already existing.-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
