--- a/lab2/app/build.gradle
+++ b/lab2/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -29,6 +30,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding true
     }
     defaultConfig {
 
@@ -60,4 +64,8 @@ dependencies {
     def lifecycle_extension_version = '2.2.0-beta01'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_extension_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+
+
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 }
