--- a/lab2/app/src/main/AndroidManifest.xml
+++ b/lab2/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.lab2">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,19 +12,46 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab2"
-        android:name=".App"
+        android:theme="@style/splashScreenTheme"
         tools:targetApi="31">
+        <receiver
+            android:name=".TimerNotificationActionReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="stop"/>
+                <action android:name="pause"/>
+                <action android:name="resume"/>
+                <action android:name="start"/>
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".TimerExpiredReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
+        <activity
+            android:name=".TimerStart"
+            android:exported="false"
+            android:label="@string/title_activity_timer_start"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".EditPhase"
+            android:exported="false"
+            android:label="Edit Phase"/>
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
-            android:label="@string/title_activity_settings">
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.lab2.MainActivity" />
         </activity>
         <activity
             android:name=".EditActivity"
             android:exported="false"
-            android:label="Edit Page">
-        </activity>
+            android:label="Edit Page" />
         <activity
             android:name=".TimerActivity"
             android:exported="false" />
@@ -31,9 +59,11 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="Home page">
-            <!-- When returning from Settings Activity, it does not recreates the instance of the activity instead calls the already existing.-->
+
+            <!-- When returning from Settings Activity, it does not recreates the instance of the activity instead calls the already existing. -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
